# workflows-manager

./: .gitignore  README.md  build.ps1  pyproject.toml  toggle-monitor.py
.claude/skills/release/: skill.md
.github/workflows/: create-release.yml  release.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: connection_manager.py
backend/app/models/: __init__.py  event.py
backend/app/routers/: events.py  websocket.py
backend/app/services/: event_store.py
frontend/: .gitignore  app.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: manifest.json
frontend/src/: app.tsx  entry-server.tsx
frontend/src/components/: ConnectionStatus.tsx  Dashboard.tsx  Graph.tsx  Logs.tsx  Timeline.tsx  Widgets.tsx  index.ts
frontend/src/lib/: api.ts  types.ts  websocket.ts
frontend/src/routes/: index.tsx
frontend/src/stores/: monitorStore.ts
frontend/src/styles/: app.css
plans/: feature-3-cicd-monitor-plan.md  plan-issue-6.md
wfm/: __init__.py  cli.py  monitor.py  platform.py  server.py  workflow_manager.py
wfm/dashboard/: app.js  index.html  styles.css
