[project]
name = "workflows-manager"
version = "0.3.1"
description = "CLI tool to manage workflows, skills and schemas from multiple repositories"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jean-Pierre", email = "jp@example.com" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
monitor = [
    "websockets>=12.0",
]

[project.scripts]
wfm = "wfm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wfm"]
artifacts = [
    "wfm/dashboard/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "wfm/",
    "wfm/dashboard/",
    "README.md",
]
